--- a/Under_Water/Options/underwater.yml
+++ b/Under_Water/Options/underwater.yml
@@ -10,8 +10,8 @@ datasets:
   train:
     name: TrainSet
     type: Dataset_PairedImage
-    dataroot_gt: Dataset/train/target
-    dataroot_lq: Dataset/train/input
+    dataroot_gt: ../Dataset/train/target
+    dataroot_lq: ../Dataset/train/input
     geometric_augs: true
     filename_tmpl: '{}'
     io_backend:
@@ -70,9 +70,6 @@ train:
   warmup_iter: -1 # no warm up
   use_grad_clip: true
 
-  # Split 300k iterations into two cycles. 
-  # 1st cycle: fixed 3e-4 LR for 92k iters. 
-  # 2nd cycle: cosine annealing (3e-4 to 1e-6) for 208k iters.
   scheduler:
     type: CosineAnnealingRestartCyclicLR
     periods: [50000, 100000, 650000]       
@@ -97,12 +94,11 @@ train:
       L1Loss:
         loss_weight: 1
         reduction: mean
-    weights: [1, 0.2]
+    weights: [1]
     verbose: true 
 
 # validation settings
 val:
-  window_size: 8
   val_freq: !!float 4e3
   save_img: false
   rgb2bgr: true
@@ -111,9 +107,21 @@ val:
 
   metrics:
     psnr: # metric name, can be arbitrary
+      reference_metric: true
       type: calculate_psnr
       crop_border: 0
       test_y_channel: false
+    ssim: # metric name, can be arbitrary
+      reference_metric: true
+      type: calculate_ssim
+      crop_border: 0
+      test_y_channel: false
+    uiqm: # metric name, can be arbitrary
+      reference_metric: false
+      type: calculate_uiqm
+    uciqe: # metric name, can be arbitrary
+      reference_metric: false
+      type: calculate_uciqe
 
 # logging settings
 logger:
