--- a/Under_Water/Options/underwater.yml
+++ b/Under_Water/Options/underwater.yml
@@ -1,5 +1,5 @@
 # general settings
-name: UnderWaterNet
+name: u11
 model_type: ImageCleanModel
 scale: 1
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -42,8 +42,8 @@ datasets:
   val:
     name: ValSet
     type: Dataset_PairedImage
-    dataroot_gt: ./Under_Water/Datasets/EUVP/test_samples/GTr
-    dataroot_lq: ./Under_Water/Datasets/EUVP/test_samples/Inp
+    dataroot_gt: ../Dataset/testset(ref)/test-EUVP/target
+    dataroot_lq: ../Dataset/testset(ref)/test-EUVP/input
     gt_size: 256   
     io_backend:
       type: disk
